--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 				while they wait out the global pandemic.
 			</p>
 		</div>
-		
+		<div class='navigation' id="myHeader">
+			<p>In a subReddit Covidcookery, people are posting their culinary masterpieces 
+				while they wait out the global pandemic. What are people eating during lockdown?
+			</p>
+			<div class="buttons_navigation">
+				<label class="btn btn-default active"><input type="radio" name="options" id="button_network" checked>Food Network</label>
+				<label class="btn btn-default" onclick="myFunction()"><input type="radio" name="options" id='button_summary'>Summary of Changes</label>
+			</div>
+		</div>
 		<!-- <figure class="aligncenter">
 			<img class = "img-container" src="img/PandemicCooking_Final.jpg">
 			<figcaption itemprop="caption description" class="img-caption">
@@ -43,13 +51,6 @@
 	</section>
 
 	<section class='canvas'>
-		<!-- <div>
-			<h2>What are people eating during lockdown?</h2>
-			<p class="desc" id="paragraph1">
-				(desc)
-			</p>
-		</div> -->
-
 		<div class = 'plot'>
 			<!-- <div class='buttons' id='child_div_1'>
 				<div class="btn-group-vertical" data-toggle="buttons">
@@ -62,26 +63,33 @@
 					<label class="btn btn-default"><input type="radio" name="options" id='btn_nov1_15'>Nov 1–15</label>
 					<label class="btn btn-default"><input type="radio" name="options" id='btn_nov16_30'>Nov 16–30</label>
 				</div>
-			</div>
-			<div class='tooltip_title' id='child_div_2'></div> -->
+			</div> -->
+			<!-- <div class='tooltip_title' id='child_div_2'></div> -->
 			<div class='graph' id='child_div_3'>
-				<svg class="svg"></svg>
-				<div class='navigation' id="myHeader">
-					<p>In a subReddit Covidcookery, people are posting their culinary masterpieces 
-						while they wait out the global pandemic. What are people eating during lockdown?
-					</p>
-					<div class="buttons_navigation">
-						<label class="btn btn-default active"><input type="radio" name="options" id="button_network" checked>Food Network</label>
-						<label class="btn btn-default"><input type="radio" name="options" id='button_summary'>Summary of Changes</label>
+				<!-- <svg class="svg"></svg> -->
+				<!-- <iframe width="100%" height="1066" frameborder="0" id='iframe' src="https://observablehq.com/embed/0fe9970960059896?cell=chart"></iframe> -->
+				<div id="bar">
+					<div class="viewof-keyframe"></div>
+					<div class="chart" id="bar_animation"></div>
+					<script type="module">
+						import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
+						import define from "https://api.observablehq.com/d/0fe9970960059896.js?v=3";
+						(new Runtime).module(define, name => {
+						if (name === "viewof keyframe") return Inspector.into(".viewof-keyframe")();
+						if (name === "chart") return Inspector.into(".chart")();
+						return ["update"].includes(name) || null;
+						});
+					</script>
+					</div>
 					</div>
 				</div>
-			</div>
+				
 		</div>
 	</section>
 
 	<!-- <section class='bar_graph'>
 		<div class="viewof-keyframe"></div>
-		<div class="chart" id="bar_animation" style="width:600px;"></div>
+		<div class="chart" id="bar_animation"></div>
 			<script type="module">
 				import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
 				import define from "https://api.observablehq.com/d/0fe9970960059896.js?v=3";
@@ -94,7 +102,9 @@
 		</div>
 	</section> -->
 
+	<section class='footer'>
 
+	</section>
 	<script src='https://d3js.org/d3.v4.min.js'></script>
 	<!-- <script src = './lib/d3/d3.js'></script> -->
 	<script src='./script.js'></script>
