--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 
 <body>
@@ -67,7 +68,13 @@
 						<option value="Nov16_30">Nov 16–30</option>
 					</select>
 				</div>
-				<div class='tooltip_title' id='tooltip'></div>
+				<div class="tooltip_holder">
+					<div class='tooltip_title' id='tooltip'></div>
+					<div class="up_votes">
+						<i class="fas fa-thumbs-up" aria-hidden="true"></i>
+						<span id="like"></span>
+					</div>
+				</div>
 			</div>
 			<div class='plot'>
 				<div class='graph' id='child_div_3'>
