--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- <h2>Inspiration from an amazing Reddit community — Covidcookery</h2> -->
 			</span>
 			<p class="author">
-				YUAN HUA
+				<!-- YUAN HUA -->
 				<span id="date">DEC 1, 2020</span>
 			</p>
 			<p class="desc">
